src/Components/Track/Track.css
.Track {
    display: flex;
    align-items: center;
    padding: .3rem;
    border-bottom: 1px solid rgba(256, 256, 256, 0.8);
}

.Track-action {
    cursor: pointer;
    padding: .5rem;
    font-size: 1.05rem;
    transition: color .25s;
    border: 0px;
    background-color: rgba(0, 0, 0, 0);
    color: #fff;
}

.Track-action:hover {
    color: rgba(265, 265, 265, .5);
}

.Track-album-cover {
    border-radius: 8%;
    margin-right: .5rem;
    margin-left: -.3rem;
    margin-top: 0;
    opacity: 1;
    z-index: 0;
}

.Track-cover-preview:hover img {
    opacity: .3;
}

.Track-cover-preview:hover i {
    visibility: visible;
}

.Track-cover-preview:hover p {
    opacity: 1;
    visibility: visible;
}

.Track-information {
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 72px;
}

.Track-information h3 {
    margin-bottom: .22rem;
}

.Track-information p {
    font-size: .83rem;
    font-weight: 300;
    color: rgba(256, 256, 256, 0.8);
}

.Track-preview-container {
    position: relative;
}

.Track-preview-icon {
    cursor: pointer;
    font-size: 30px;
    opacity: .5;
    display: block;
    position: absolute;
    margin-left: 15px;
    margin-top: 18px;
    z-index: 2;
    visibility: hidden;
}

.Track-preview-icon:hover {
    opacity: .9;
}

.Track-preview-unavailable {
    font-size: 10px;
    opacity: 1;
    display: block;
    position: absolute;
    text-align: center;
    margin-left: 6px;
    margin-top: 15px;
    visibility: hidden;
}

